@@ -83,4 +83,55 @@ class ProjectTest < Test::Unit::TestCase
     assert_equal '_my__project', project.webistrano_project_name
   end
   
+  def test_prepare_cloning
+    original = create_new_project(:name => 'Some Project', :template => 'mod_rails', :description => "Dr. Foo")
+    my = create_new_project(:template => 'mongrel_rails')
+    
+    my.prepare_cloning(original)
+    assert_equal "Clone of Some Project", my.name
+    assert_equal "Clone of Some Project: Dr. Foo", my.description
+    assert_equal original.template, my.template
+  end
+  
+  def test_clone
+    # setup
+    original = create_new_project(:name => 'Some Project', :template => 'mod_rails')
+    3.times do |i|
+      create_new_project_configuration(:project => original, :name => "#{i}-project-conf", :value => "value-#{i}")
+    end
+    stage_1 = create_new_stage(:project => original, :name => 'test')
+      create_new_stage_configuration(:stage => stage_1, :name => "stage1-conf", :value => "stage1-value")
+    stage_2 = create_new_stage(:project => original, :name => 'prod')
+      create_new_stage_configuration(:stage => stage_2, :name => "stage2-conf", :value => "stage2-value")
+    recipe = create_new_recipe
+    stage_1.recipes << recipe
+      
+    new_project = create_new_project
+    new_project.clone(original)
+    
+    # check project configuration
+    assert_equal original.configuration_parameters.count, new_project.configuration_parameters.count
+    new_project.configuration_parameters.each_with_index do |conf, i|
+      orig = original.configuration_parameters.find_by_name(conf.name)
+      
+      if conf.name == 'application'
+        assert_match 'some_project',conf.value
+      else
+        assert_equal orig.name, conf.name
+        assert_equal orig.value, conf.value
+        assert_equal orig.prompt_on_deploy, conf.prompt_on_deploy
+      end
+    end
+
+    # check stages
+    assert_equal 2, new_project.stages.count
+    cloned_stage_1 = new_project.stages.find_by_name("test")
+    cloned_stage_2 = new_project.stages.find_by_name("prod")
+    assert_equal stage_1.configuration_parameters.first.name, cloned_stage_1.configuration_parameters.first.name 
+    assert_equal stage_1.configuration_parameters.first.value, cloned_stage_1.configuration_parameters.first.value
+    assert_equal stage_2.configuration_parameters.first.name, cloned_stage_2.configuration_parameters.first.name 
+    assert_equal stage_2.configuration_parameters.first.value, cloned_stage_2.configuration_parameters.first.value
+    assert_equal [recipe], cloned_stage_1.recipes
+  end
+  
 end
